# mudasky

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
backend/api/: Dockerfile  pyproject.toml
backend/api/alembic/: env.py
backend/api/alembic/versions/: 056e63e9318f_user_添加_is_superuser_phone_改为_nullable.py  1036c2a0a34b_add_article_slug_excerpt_is_pinned_view_.py  14ceba102aff_user_type_改为_guest_member_staff.py  1dc8ec20fe75_user_添加_two_factor_method_字段.py  209cac86f6b7_role_添加_is_builtin_sort_order.py  44d7d263e34a_初始化数据库表.py  52f161db130f_user_group_id_fk_drop_user_group_table.py  6701cb76641b_add_system_config_table.py  a25736f1ab28_add_university_table.py  a3b8f1c2d4e5_document_表重构_添加分类和原始文件名.py  b5c7d9e1f3a2_add_success_case_table.py  c13b0b013576_rbac_重构_role_替代_permissiongroup.py  d38a2d8ff71f_merge_university_and_case_migrations.py  e2c0544550dd_rbac_权限表和_user_type_字段.py
backend/api/api/: main.py
backend/api/api/admin/: __init__.py
backend/api/api/auth/: __init__.py  router.py  schemas.py  service.py
backend/api/api/core/: cache.py  dependencies.py  permission_tree.py
backend/api/api/portal/: __init__.py
backend/api/api/public/: __init__.py
backend/api/scripts/: init_superuser.py  start.sh
backend/api/scripts/init/: __init__.py  __main__.py  seed_config.py  seed_content.py  seed_rbac.py  seed_user.py
backend/api/src/api/: main.py
backend/api/tests/: conftest.py  test_admin_router.py  test_admin_service.py  test_admin_service_extra.py  test_auth_router.py  test_auth_service.py  test_config_repository.py  test_config_router.py  test_config_service.py  test_content_router.py  test_content_service.py  test_core_config.py  test_core_crypto.py  test_core_security.py  test_core_storage.py  test_document_router.py  test_document_service.py  test_error_codes.py  test_main.py  test_rbac_repository.py  test_rbac_router.py  test_rbac_service.py  test_session_router.py  test_user_router.py  test_user_service.py
backend/api/tests/auth/: __init__.py  test_auth_repository.py  test_auth_service_extra.py  test_repository.py  test_router.py  test_schemas.py  test_service.py  test_service_extra.py
backend/api/tests/content/: __init__.py  test_content_repository.py
backend/api/tests/core/: test_cache.py  test_crypto.py  test_permission_tree.py  test_security.py
backend/api/tests/document/: __init__.py  test_document_repository.py  test_document_storage.py
backend/api/tests/e2e/: conftest.py  test_admin.py  test_auth.py  test_banners.py  test_case.py  test_config.py  test_health.py  (+16 more)
backend/shared/: pyproject.toml
backend/worker/: pyproject.toml
(+1070 files in other folders)
