[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mudasky-api"
version = "0.1.0"
description = "mudasky API 服务"
requires-python = ">=3.14"
dependencies = [
    "mudasky-backend",
    "uvicorn[standard]>=0.34",
    "alembic>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "httpx>=0.28",
    "black>=25.1",
]

[tool.uv.sources]
mudasky-backend = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
